# Loombound

./: .env.example  .gitignore  .gitmodules  CAMPAIGN.md  LICENSE  README.en.md  README.md  STARTUP.md  build_demo.py  gen  gen.sh  generate_arc_palette.py  generate_campaign.py  generate_table_a.py  generate_table_b.py  loombound  pyproject.toml  report  report.sh  report_llm_usage.py  requirements.txt  run  run.sh  summation.md  tri-layer-prototype-spec.md
data/: arc_state_catalog.json  t2_arc_palette.json
docs/: CAMPAIGN.md  CHANGES.md  LANGUAGE.en.md  LANGUAGE.md  SEMANTIC_OS.en.md  SEMANTIC_OS.md  STARTUP.md  architecture.en.md  architecture.md  decision-log.md  development-roadmap.md  game-design.en.md  game-design.md  glossary.md  llm-architecture.en.md  llm-architecture.md  llm-authored-assets.md  master-plan.md  mvp-scope.md  project-definition.md  style-bible.md  system-architecture.md  tri-layer-ai-protocol.md  tri-layer-prototype-spec.md
logs/: heritage_liquidation_bureau_playthrough.md  sample_deep_mine_cult_act1.md
schemas/: arbitration-result.schema.json  arbitration.schema.json  choice-context.schema.json  rule-template.schema.json  rule.schema.json  run-snapshot.schema.json
scripts/: build_demo.py  eval_m2_openai.py  gen_t1_cache.py  gen_t1_cache_table.py  gen_t2_cache.py  gen_t2_cache_table.py  generate_arc_palette.py  generate_campaign.py  generate_table_b.py  measure_m2_embedding.sh  report_llm_usage.py
src/: __init__.py  loombound_main.py
tasks/: backlog.md  module-progress.md  week1-plan.md
tests/: test_a1_store.py  test_a2_store.py  test_arc_index.py  test_asset_validation.py  test_collector.py  test_effects.py  test_embedder.py  test_enforcement.py  test_fast_core.py  test_generation_tone_controls.py  test_llm_usage_report.py  test_m2_context.py  test_m2_store.py  test_needs_reclassification.py  test_play_cli_utils.py  test_play_encounter.py  test_play_node.py  test_prefetch_lookahead.py  test_presentation_cli.py  (+10 more)
(+301 files in other folders)
