[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loombound"
version = "0.1.0"
description = "Deterministic-first CLI narrative prototype with sanity pressure, run memory, and arbitration."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "anthropic>=0.94.1",
  "openai>=2.31.0",
  "httpx>=0.28.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
