[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loombound"
version = "0.1.0"
description = "Roguelite narrative engine with a three-layer AI architecture (local C1 + Haiku C2 + Opus C3)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "xxx" }
]
dependencies = [
  "anthropic>=0.94.1",
  "httpx>=0.28.1",
]

[project.scripts]
loombound = "src.loombound_main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
